--- a/frontend/src/components/Hero/hero.css
+++ b/frontend/src/components/Hero/hero.css
@@ -10,7 +10,7 @@
 }
 
 .hero-section .hero {
-  padding-top: 5em;
+  padding-top: 5.5em;
   text-shadow: 0px 10px 6px rgba(0, 0, 0, 0.7);
 }
 
@@ -26,7 +26,7 @@
 
 @media (max-width: 600px) {
   .hero-section .hero h1 {
-    font-size: 4em;
+    font-size: 3em;
   }
 
   .hero-section .hero p {
